// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MegaMenu /> create mega menu 1`] = `
<nav
  className="fd-mega-menu"
>
  <div
    className="fd-mega-menu__group"
  >
    <h1
      className="fd-mega-menu__title"
    >
      Group Title
    </h1>
    <ul
      className="fd-mega-menu__list"
    >
      <li
        className="fd-mega-menu__item"
      >
        <a
          className="fd-mega-menu__link"
          href="#"
          onClick={[Function]}
        >
          Link Item
        </a>
      </li>
      <li
        className="fd-mega-menu__item"
      >
        <a
          className="fd-mega-menu__link is-selected has-child"
          href="#"
          onClick={[Function]}
        >
          Link Item
        </a>
        <ul
          aria-expanded={false}
          aria-hidden={true}
          className="fd-mega-menu__sublist"
          id="item_2"
        >
          <li
            className="fd-mega-menu__subitem"
          >
            <a
              className="fd-mega-menu__sublink"
              href="#"
              onClick={[Function]}
            >
              Link
            </a>
          </li>
          <li
            className="fd-mega-menu__subitem"
          >
            <a
              className="fd-mega-menu__sublink"
              href="#"
              onClick={[Function]}
            >
              Link
            </a>
          </li>
          <li
            className="fd-mega-menu__subitem"
          >
            <a
              className="fd-mega-menu__sublink"
              href="#"
              onClick={[Function]}
            >
              Link
            </a>
          </li>
          <li
            className="fd-mega-menu__subitem"
          >
            <a
              className="fd-mega-menu__sublink"
              href="#"
              onClick={[Function]}
            >
              Link
            </a>
          </li>
        </ul>
      </li>
      <li
        className="fd-mega-menu__item"
      >
        <a
          className="fd-mega-menu__link"
          href="#"
          onClick={[Function]}
        >
          Link Item
        </a>
      </li>
      <li
        className="fd-mega-menu__item"
      >
        <a
          className="fd-mega-menu__link"
          href="#"
          onClick={[Function]}
        >
          Link Item
        </a>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`<MegaMenu /> create mega menu 2`] = `
<nav
  className="fd-mega-menu blue"
>
  <div
    className="fd-mega-menu__group red"
  >
    <h1
      className="fd-mega-menu__title"
    >
      Group Title
    </h1>
    <ul
      className="fd-mega-menu__list blue"
    >
      <li
        className="fd-mega-menu__item"
      >
        <a
          className="fd-mega-menu__link"
          href="#"
          onClick={[Function]}
        >
          Link Item
        </a>
      </li>
      <li
        className="fd-mega-menu__item"
      >
        <a
          className="fd-mega-menu__link"
          href="#"
          onClick={[Function]}
        >
          Link Item
        </a>
      </li>
      <li
        className="fd-mega-menu__item"
      >
        <a
          className="fd-mega-menu__link has-child"
          href="#"
          onClick={[Function]}
        >
          Link Item
        </a>
        <ul
          aria-expanded={false}
          aria-hidden={true}
          className="fd-mega-menu__sublist"
          id="item_8"
        >
          <li
            className="fd-mega-menu__subitem"
          >
            <a
              className="fd-mega-menu__sublink"
              href="#"
              onClick={[Function]}
            >
              Link
            </a>
          </li>
          <li
            className="fd-mega-menu__subitem"
          >
            <a
              className="fd-mega-menu__sublink"
              href="#"
              onClick={[Function]}
            >
              Link
            </a>
          </li>
          <li
            className="fd-mega-menu__subitem"
          >
            <a
              className="fd-mega-menu__sublink"
              href="#"
              onClick={[Function]}
            >
              Link
            </a>
          </li>
          <li
            className="fd-mega-menu__subitem"
          >
            <a
              className="fd-mega-menu__sublink"
              href="#"
              onClick={[Function]}
            >
              Link
            </a>
          </li>
        </ul>
      </li>
      <li
        className="fd-mega-menu__item"
      >
        <a
          className="fd-mega-menu__link"
          href="#"
          onClick={[Function]}
        >
          Link Item
        </a>
      </li>
    </ul>
  </div>
</nav>
`;
